After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696282 - y4mdec: doesn't work with playbin
y4mdec: doesn't work with playbin
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.x
Other Linux
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-03-21 12:52 UTC by Rohan Garg
Modified: 2013-03-22 14:56 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Rohan Garg 2013-03-21 12:52:32 UTC
When trying to stream a y4m file using playbin like this :
gst-launch-1.0 playbin uri=http://media.xiph.org/video/derf/y4m/sintel_trailer_2k_480p24.y4m 

I get a WARNING: from element /GstPlayBin:playbin0/GstURIDecodeBin:uridecodebin0: No decoder available for type 'application/x-yuv4mpeg'.

As explained by Tim-Philipp Muller on IRC, this is caused due to an absence of the y4mversion field in the typefinders
Comment 1 Tim-Philipp Müller 2013-03-22 09:39:24 UTC
I fixed this, but the file still doesn't play:

 commit c7855b5505e35195b6f116c0bf942100135098fb
 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
 Date:   Fri Mar 22 09:35:21 2013 +0000

    typefinding: fix y4m caps
    
    We need to specify the y4mversion field now.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=696282


y4mdec needs fixing too, it doesn't seem to output any buffers (?) and playbin then fails, or maybe it doesn't do an allocation query and that's why it fails, no idea, will have to look at it some other time.

Also used this file locally: http://media.xiph.org/video/derf/y4m/akiyo_qcif.y4m
Comment 2 Sebastian Dröge (slomo) 2013-03-22 14:56:23 UTC
commit dfa6c17de5921c30ba757f9e935449b6e8b7cbf9
Author: Sebastian Dröge <sebastian.droege@collabora.co.uk>
Date:   Fri Mar 22 15:49:18 2013 +0100

    y4mdec: Use the correct strides as used by y4m and convert to GStreamer strides if nec
    
    https://bugzilla.gnome.org/show_bug.cgi?id=696361

commit 58bfdb279896fdcd46248adf758b83fb5114065d
Author: Sebastian Dröge <sebastian.droege@collabora.co.uk>
Date:   Fri Mar 22 14:52:54 2013 +0100

    y4mdec: Use the default event/query handlers for the default handling
    
    Especially don't forward caps events from the sinkpad to the srcpad.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=696282

commit 5dba06113de3f4b6466d9e6374f2f4a0b200d4f7
Author: Sebastian Dröge <sebastian.droege@collabora.co.uk>
Date:   Fri Mar 22 14:37:37 2013 +0100

    y4mdec: Properly handle segment and time values of -1