typefinding: fix y4m caps

We need to specify the y4mversion field now.

https://bugzilla.gnome.org/show_bug.cgi?id=696282